# Price-analyzer

./: .gitignore  README.md  map.drawio
server/: go.mod  go.sum  main.go  xxx.html
server/config/: config.go  config.yaml
server/data/: data.go
server/jobs/: Crawler.go
server/mongo/: mongo.go
server/test/: data.py
server/test_2/src/: app.rs
server/tools/: dataGet.go
service/: Cargo.toml  go.mod  main.go
service/conf/: conf.go  conf.yaml
service/db/: db.go
service/go/config/: config.go  config.yaml
service/go/mongo/: mongo.go
service/old/: go.mod  go.sum  main.go  xxx.html
service/old/config/: config.go  config.yaml
service/old/data/: data.go
service/old/jobs/: Crawler.go
service/old/mongo/: mongo.go
service/old/test/: .csv  data.json  data.py  t_test.go
service/old/tools/: dataGet.go
service/src/: main.rs
web/: main.html
web/test_1/: .gitignore  main.html  main.wasm  wasm_exec.js
web/test_3/: Cargo.toml  index.html  main.js
web/test_3/src/: lib.rs
web/test_5/: Cargo.toml
web/test_5/src/: lib.rs
