[package]
name = "test_3"
version = "0.1.0"
authors = ["keeYuc <@keeyu.cqy>"]
edition = "2018"
[lib]
crate-type = ["cdylib","rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde" = "1.0.126"
"yew" = "0.18.0"
"anyhow" = "1.0.41"
wasm-bindgen = "0.2"