[package]
name = "test_3"
version = "0.1.0"
authors = ["keeYuc <@keeyu.cqy>"]
edition = "2018"
[lib]
crate-type = ["cdylib","rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde" = "1.0.126"
"yew" = "0.18.0"
"anyhow" = "1.0.41"
wasm-bindgen = "0.2.74"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = "1.7.1"
mio = "0.7.13" 